--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Conduct of life -- Fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The History of Sandford and Merton
 url: http://www.gutenberg.org/ebooks/30274
